--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[package]
-name = "cosmos"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
+[workspace]
+members = ["crates/apps/orion"]
+resolver = "3"
