--- a/crates/apps/orion/Cargo.toml
+++ b/crates/apps/orion/Cargo.toml
@@ -8,5 +8,10 @@ name = "orion"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1.0.100"
+chrono = { version = "0.4.42", features = ["serde"] }
+config = { version = "0.1.0", path = "../../config" }
 gpui = "0.2.2"
 gpui-component = "0.5.0"
+mail = { version = "0.1.0", path = "../../mail" }
+tokio = { version = "1.48.0", features = ["full"] }
