phase 2: full mailbox sync + nav

--- a/crates/apps/orion/Cargo.toml
+++ b/crates/apps/orion/Cargo.toml
@@ -11,7 +11,9 @@ path = "src/main.rs"
 anyhow = "1.0.100"
 chrono = { version = "0.4.42", features = ["serde"] }
 config = { version = "0.1.0", path = "../../config" }
+env_logger = "0.11.8"
 gpui = "0.2.2"
 gpui-component = "0.5.0"
+log = "0.4.29"
 mail = { version = "0.1.0", path = "../../mail" }
 tokio = { version = "1.48.0", features = ["full"] }
