--- a/crates/mail/Cargo.toml
+++ b/crates/mail/Cargo.toml
@@ -12,7 +12,9 @@ anyhow = "1.0.100"
 base64 = "0.22.1"
 chrono = { version = "0.4.42", features = ["serde"] }
 config = { version = "0.1.0", path = "../config" }
+log = "0.4.29"
 open = "5.3.3"
+redb = "3.1.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
@@ -21,4 +23,5 @@ url = "2.5.7"
 urlencoding = "2.1.3"
 
 [dev-dependencies]
+tempfile = "3.23.0"
 tokio-test = "0.4.4"
