--- a/crates/mail/Cargo.toml
+++ b/crates/mail/Cargo.toml
@@ -14,6 +14,7 @@ chrono = { version = "0.4.42", features = ["serde"] }
 config = { version = "0.1.0", path = "../config" }
 log = "0.4.29"
 open = "5.3.3"
+rayon = "1.11.0"
 redb = "3.1.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
