--- a/crates/apps/orion/Cargo.toml
+++ b/crates/apps/orion/Cargo.toml
@@ -14,7 +14,9 @@ config = { version = "0.1.0", path = "../../config" }
 env_logger = "0.11.8"
 gpui = "0.2.2"
 gpui-component = { version = "0.5.0", features = ["webview"] }
+gpui-component-assets = "0.5.0"
 log = "0.4.29"
 mail = { version = "0.1.0", path = "../../mail" }
+serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 wry = { version = "0.53.3", package = "lb-wry" }
