--- a/crates/mail/Cargo.toml
+++ b/crates/mail/Cargo.toml
@@ -18,6 +18,7 @@ rayon = "1.11.0"
 redb = "3.1.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+tantivy = "0.25.0"
 thiserror = "2.0.17"
 ureq = { version = "3.1.4", features = ["json"] }
 url = "2.5.7"
