--- a/crates/apps/orion/Cargo.toml
+++ b/crates/apps/orion/Cargo.toml
@@ -17,6 +17,7 @@ gpui-component = { version = "0.5.0", features = ["webview"] }
 gpui-component-assets = "0.5.0"
 log = "0.4.29"
 mail = { version = "0.1.0", path = "../../mail" }
+rust-embed = "8.9.0"
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 wry = { version = "0.53.3", package = "lb-wry" }
