--- a/crates/apps/orion/Cargo.toml
+++ b/crates/apps/orion/Cargo.toml
@@ -21,3 +21,13 @@ rust-embed = "8.9.0"
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 wry = { version = "0.53.3", package = "lb-wry" }
+
+[package.metadata.bundle]
+name = "Orion"
+identifier = "com.cosmos.orion"
+resources = ["assets"]
+category = "Productivity"
+icon = ["assets/icon.icns"]
+copyright = "Copyright 2024"
+short_description = "A modern mail client"
+long_description = "Orion is a modern, fast mail client built with GPUI."
