replaces kv stores with sqlite + blob storage

--- a/crates/mail/Cargo.toml
+++ b/crates/mail/Cargo.toml
@@ -12,18 +12,19 @@ anyhow = "1.0.100"
 base64 = "0.22.1"
 chrono = { version = "0.4.42", features = ["serde"] }
 config = { version = "0.1.0", path = "../config" }
-heed3 = "0.22.0"
 log = "0.4.29"
 open = "5.3.3"
 rayon = "1.11.0"
-redb = "3.1.0"
+rusqlite = { version = "0.37", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
+zstd = "0.13"
 serde_json = "1.0.145"
 tantivy = "0.25.0"
 thiserror = "2.0.17"
 ureq = { version = "3.1.4", features = ["json"] }
 url = "2.5.7"
 urlencoding = "2.1.3"
+rusqlite_migration = "2.3.0"
 
 [dev-dependencies]
 tempfile = "3.23.0"
