--- a/crates/mail/Cargo.toml
+++ b/crates/mail/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0.100"
+uniffi = "0.30"
 base64 = "0.22.1"
 chrono = { version = "0.4.42", features = ["serde"] }
 config = { version = "0.1.0", path = "../config" }
